force-app/main/default/objects/LLC_BI__Income__c/fields/Current_Employment_Length__c.field-meta.xml
<CustomField>
    <fullName>Current_Employment_Length__c</fullName>
    <label>Current Employment Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 6 months</fullName>
            </value>
            <value>
                <fullName>6 months - 3 Years</fullName>
            </value>
            <value>
                <fullName>3+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>