force-app/main/default/objects/LLC_BI__Income__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>Used on the Income and Employment route for OARL.</description>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>