force-app/main/default/objects/LLC_BI__Income__c/fields/Employer_State__c.field-meta.xml
<CustomField>
    <fullName>Employer_State__c</fullName>
    <label>Employer State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__US_States_Abbreviated</valueSetName>
    </valueSet>
</CustomField>