force-app/main/default/objects/LLC_BI__Income__c/fields/Income_Type_CM__c.field-meta.xml
<CustomField>
    <fullName>Income_Type_CM__c</fullName>
    <label>Income Type CM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimony Support</fullName>
            </value>
            <value>
                <fullName>Gross Annual Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>