force-app/main/default/objects/LLC_BI__Income__c/fields/Prior_Employer__c.field-meta.xml
<CustomField>
    <fullName>Prior_Employer__c</fullName>
    <label>Prior Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>